--- a/devWebI/trabalhoCRUD/index.html
+++ b/devWebI/trabalhoCRUD/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Agenda de Contatos</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
 </head>
 <body>
     <div class="container">
@@ -36,6 +36,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/imask"></script>
-    <script src="js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
