--- a/devWebI/trabalhoCRUD/index.html
+++ b/devWebI/trabalhoCRUD/index.html
@@ -34,8 +34,8 @@
         </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://unpkg.com/imask"></script>
+    <script src="./src/lib/sweetalert2@11.js"></script>
+    <script src="./src/lib/imask.js"></script>
     <script src="./src/js/script.js"></script>
 </body>
 </html>
