--- a/devWebI/trabalhoCRUD/index.html
+++ b/devWebI/trabalhoCRUD/index.html
@@ -36,6 +36,8 @@
 
     <script src="./src/lib/sweetalert2@11.js"></script>
     <script src="./src/lib/imask.js"></script>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="./src/js/script.js"></script>
 </body>
 </html>
