Adiciona formulário de busca de CEP com integração à API e estilização básica

--- a/devWebI/aula/consumindo-API/index.html
+++ b/devWebI/aula/consumindo-API/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>Buscar CEP - Consumindo API</title>
 </head>
 <body>
     <h1>Buscar CEP</h1>
-    <form id="cepForm">
+    <form id="cepForm" method="post" action="salvar.html">
         <label for="cep">Cep:</label>
-        <input type="number" id="cep" name="cep" required placeholder="apenas numeros"><br><br>
+        <input type="number" id="cep" name="cep"  placeholder="apenas numeros" onblur="buscarCep(this)"><br><br>
         <label for="rua">Rua:</label>
-        <input type="text" id="rua" name="rua" size="50" required><br><br>
+        <input type="text" id="rua" name="rua" size="50" ><br><br>
         <label for="numero">Número:</label>
-        <input type="text" id="numero" name="numero" required>
+        <input type="text" id="numero" name="numero" >
         <label for="complemento">Complemento:</label>
         <input type="text" id="complemento" name="complemento" size="10"><br><br>
         <label for="bairro">Bairro:</label>
         <input type="text" id="bairro" name="bairro" size="40" required><br><br>
         <label for="cidade">Cidade:</label>
-        <input type="text" id="cidade" name="cidade" required><br><br>
-        <label for="estado">Estado:</label>
+        <input type="text" id="cidade" name="cidade" ><br><br>
         <label for="estado">Estado:</label>
         <select name="estado" id="estado">
             <option value=""selected></option>
@@ -54,5 +53,32 @@
             <option value="TO">Tocantins</option>
         </select>
     </form>
+
+    <script>
+        function buscarCep(cep){
+            var url = "https://viacep.com.br/ws/" + cep.value + "/json/";
+            fetch(url)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Erro ao buscar CEP');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    if (data.erro) {
+                        alert("CEP não encontrado.");
+                        return;
+                    }
+                    document.getElementById('rua').value = data.logradouro;
+                    document.getElementById('bairro').value = data.bairro;
+                    document.getElementById('cidade').value = data.localidade;
+                    document.getElementById('estado').value = data.uf;
+                })
+                .catch(error => {
+                    console.error('Erro:', error);
+                });
+        }
+    </script>
+
 </body>
 </html>
