Remove ícone da agenda e comentários desnecessários no HTML

--- a/devWebI/trabalhoCRUD/index.html
+++ b/devWebI/trabalhoCRUD/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>📇 Agenda de Contatos</h1>
+        <h1>Agenda de Contatos</h1>
 
         <form id="formulario" onsubmit="event.preventDefault(); inserirContato();">
         <div class="formulario">
@@ -29,14 +29,13 @@
             </tr>
         </thead>
         <tbody id="tabelaContatos">
-            <!-- Contatos inseridos via JavaScript -->
+            
         </tbody>
         </table>
     </div>
 
     <script src="./src/lib/sweetalert2@11.js"></script>
     <script src="./src/lib/imask.js"></script>
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="./src/js/script.js"></script>
 </body>
