--- a/devWebI/trabalhoCRUD/index.html
+++ b/devWebI/trabalhoCRUD/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Agenda de Contatos</title>
+    <link rel="stylesheet" href="./src/css/all.min.css">
     <link rel="stylesheet" href="./src/css/style.css" />
 </head>
 <body>
@@ -19,24 +20,23 @@
         </div>
         </form>
 
-        <table>
-        <thead>
-            <tr>
-            <th>Nome</th>
-            <th>Telefone</th>
-            <th>E-mail</th>
-            <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody id="tabelaContatos">
-            
-        </tbody>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Telefone</th>
+                        <th>E-mail</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="tabelaContatos">
+                    <!-- carregado automaticamente -->
+                </tbody>
+            </table>
     </div>
 
     <script src="./src/lib/sweetalert2@11.js"></script>
     <script src="./src/lib/imask.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="./src/js/script.js"></script>
 </body>
 </html>
