--- a/devWebI/bootstrap/bootstrap-aula01.html
+++ b/devWebI/bootstrap/bootstrap-aula01.html
@@ -49,7 +49,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-sm-4 col-md-6">
                         <div class="card">
                         <img src="./image/images.jpeg" class="card-img-top" alt="Paisagem de exemplo">
                         <div class="card-body">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
 
-                    <div class="col-3">
+                    <div class="col-12 col-sm-4 col-md-3">
                         <div class="card">
                         <img src="./image/images.jpeg" class="card-img-top" alt="Paisagem de exemplo">
                         <div class="card-body">
@@ -71,7 +71,7 @@
                         </div>
                     </div>
 
-                    <div class="col-3">
+                    <div class="col-12 col-sm-4 col-md-3">
                         <div class="card">
                         <img src="./image/images.jpeg" class="card-img-top" alt="Paisagem de exemplo">
                         <div class="card-body">
