--- a/devWebI/atividade-componentes/src/index.html
+++ b/devWebI/atividade-componentes/src/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>StreamFlix - Seu Streaming de Filmes</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="src/css/style.css">
+  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css" />
+    <!-- <link rel="stylesheet" href="./src/css/animantions.css" /> -->
+    <link rel="stylesheet" href="./src/css/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-dark text-light">
@@ -102,7 +105,8 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="src/js/script.js"></script>
+  <script src="./src/js/popper@2.11.8.js"></script>
+    <script src="./src/js/bootstrap@5.3.6.js"></script>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
