--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -108,5 +108,6 @@
   <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
     <script src="./src/js/index.js"></script>
+    <script src="./src/js/loader-top-filmes.js"></script>
 </body>
 </html>
