--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -67,116 +67,36 @@
       </button>
     </div>
 
-    <!-- Cards de filmes -->
-    <div class="container mt-4">
-      <h2>Destaques</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card bg-secondary text-light h-100">
-            <img src="src/img/filme1.jpg" class="card-img-top" alt="Filme 1" />
-            <div class="card-body">
-              <h5 class="card-title">Filme 1</h5>
-              <p class="card-text">Aventura épica nos confins do universo.</p>
-              <button
-                class="btn btn-outline-light"
-                data-bs-toggle="modal"
-                data-bs-target="#modalFilme"
-              >
-                Ver mais
-              </button>
-            </div>
-          </div>
-        </div>
-        <!-- Replique este bloco para mais filmes -->
+    <<div class="container-fluid mt-5">
+    <!-- Categoria: Lançamentos -->
+    <section class="mb-4">
+      <h3 class="mb-3 px-3">🎬 Lançamentos</h3>
+      <div class="row flex-nowrap overflow-auto px-3" id="secao-lancamentos">
+        <!-- Cards de filmes carregados via JS -->
       </div>
+    </section>
 
-      <!-- Accordion (Episódios ou informações extras) -->
-      <div class="accordion mt-5" id="infoExtras">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapseOne"
-            >
-              Episódios - Série Exemplo
-            </button>
-          </h2>
-          <div
-            id="collapseOne"
-            class="accordion-collapse collapse"
-            data-bs-parent="#infoExtras"
-          >
-            <div class="accordion-body">
-              <ul>
-                <li>Ep 1: O Começo</li>
-                <li>Ep 2: A Jornada</li>
-                <li>Ep 3: O Confronto</li>
-              </ul>
-            </div>
-          </div>
-        </div>
+    <!-- Categoria: Ação -->
+    <section class="mb-4">
+      <h3 class="mb-3 px-3">💥 Ação</h3>
+      <div class="row flex-nowrap overflow-auto px-3" id="secao-acao">
+        <!-- Cards de filmes carregados via JS -->
       </div>
-    </div>
+    </section>
 
-    <!-- Offcanvas (Filtros) -->
-    <div
-      class="offcanvas offcanvas-start text-bg-dark"
-      tabindex="-1"
-      id="offcanvasFilters"
-    >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title">Filtros</h5>
-        <button
-          type="button"
-          class="btn-close btn-close-white"
-          data-bs-dismiss="offcanvas"
-        ></button>
+    <!-- Categoria: Comédia -->
+    <section class="mb-4">
+      <h3 class="mb-3 px-3">😂 Comédia</h3>
+      <div class="row flex-nowrap overflow-auto px-3" id="secao-comedia">
+        <!-- Cards de filmes carregados via JS -->
       </div>
-      <div class="offcanvas-body">
-        <p><strong>Gênero:</strong></p>
-        <ul>
-          <li>Ação</li>
-          <li>Comédia</li>
-          <li>Drama</li>
-          <li>Terror</li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="modalFilme" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content bg-dark text-light">
-          <div class="modal-header">
-            <h5 class="modal-title">Detalhes do Filme</h5>
-            <button
-              type="button"
-              class="btn-close btn-close-white"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <p>
-              Este filme é uma jornada eletrizante com personagens
-              inesquecíveis.
-            </p>
-            <p>Duração: 2h 15min</p>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-success">Assistir</button>
-            <button class="btn btn-secondary" data-bs-dismiss="modal">
-              Fechar
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
 
     <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
     <script src="./src/js/index.js"></script>
     <script src="./src/js/loader-top-filmes.js"></script>
+    <script src="./src/js/loader-secoes.js"></script>
+
   </body>
 </html>
