--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -39,9 +39,9 @@
 
     <br>
 
-
+    <!-- carrosel top filmes -->
     <div id="carouselExampleIndicators" class="carousel slide">
-      <div class="carousel-indicators">
+      <div class="carousel-indicators" id="autoLoadTopFilmesBtns">
         <!-- carregado automaticamente -->
       </div>
       <div class="carousel-inner" id="autoLoadTopFilmes">
