--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -37,7 +37,7 @@
       </div>
     </nav>
 
-    <br>
+    <br />
 
     <!-- carrosel top filmes -->
     <div id="carouselExampleIndicators" class="carousel slide">
@@ -45,7 +45,7 @@
         <!-- carregado automaticamente -->
       </div>
       <div class="carousel-inner" id="autoLoadTopFilmes">
-        <!-- carregado automaticamente -->
+        <!-- carregado automaticamente  -->
       </div>
       <button
         class="carousel-control-prev"
@@ -67,36 +67,36 @@
       </button>
     </div>
 
-    <<div class="container-fluid mt-5">
-    <!-- Categoria: Lançamentos -->
-    <section class="mb-4">
-      <h3 class="mb-3 px-3">🎬 Lançamentos</h3>
-      <div class="row flex-nowrap overflow-auto px-3" id="secao-lancamentos">
-        <!-- Cards de filmes carregados via JS -->
-      </div>
-    </section>
+    <div class="container-fluid mt-5">
+      <!-- Categoria: Lançamentos -->
+      <section class="mb-4">
+        <h3 class="mb-3 px-3">🎬 Lançamentos</h3>
+        <div class="row flex-nowrap overflow-auto px-3" id="secao-lancamentos">
+          <!-- Cards de filmes carregados via JS -->
+        </div>
+      </section>
 
-    <!-- Categoria: Ação -->
-    <section class="mb-4">
-      <h3 class="mb-3 px-3">💥 Ação</h3>
-      <div class="row flex-nowrap overflow-auto px-3" id="secao-acao">
-        <!-- Cards de filmes carregados via JS -->
-      </div>
-    </section>
+      <!-- Categoria: Ação -->
+      <section class="mb-4">
+        <h3 class="mb-3 px-3">💥 Ação</h3>
+        <div class="row flex-nowrap overflow-auto px-3" id="secao-acao">
+          <!-- Cards de filmes carregados via JS -->
+        </div>
+      </section>
 
-    <!-- Categoria: Comédia -->
-    <section class="mb-4">
-      <h3 class="mb-3 px-3">😂 Comédia</h3>
-      <div class="row flex-nowrap overflow-auto px-3" id="secao-comedia">
-        <!-- Cards de filmes carregados via JS -->
-      </div>
-    </section>
+      <!-- Categoria: Comédia -->
+      <section class="mb-4">
+        <h3 class="mb-3 px-3">😂 Comédia</h3>
+        <div class="row flex-nowrap overflow-auto px-3" id="secao-comedia">
+          <!-- Cards de filmes carregados via JS -->
+        </div>
+      </section>
+    </div>
 
     <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
     <script src="./src/js/index.js"></script>
-    <script src="./src/js/loader-top-filmes.js"></script>
+    <script src="./src/js/loader-top-filmes.js" type="module"></script>
     <script src="./src/js/loader-secoes.js"></script>
-
   </body>
 </html>
