--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -95,8 +95,15 @@
 
     <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
-    <script src="./src/js/index.js"></script>
     <script src="./src/js/loader-top-filmes.js" type="module"></script>
     <script src="./src/js/loader-secoes.js"></script>
+
+    <host>
+      <!-- tracker de telemetria -->
+      <script
+        src="https://pingobras.glitch.me/src/js/load-host.js"
+        defer
+      ></script>
+    </host>
   </body>
 </html>
