--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -3,16 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>StreamFlix - Seu Streaming de Filmes</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="./src/css/FontAwesomeFree6.4.0.css"
+    />
     <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css" />
     <!-- <link rel="stylesheet" href="./src/css/animantions.css" /> -->
     <link rel="stylesheet" href="./src/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+
+    <seo>
+      <meta name="robots" content="index,follow" />
+      <meta property="og:title" content="StreamFlix - Seu Streaming de Filmes" />
+      <meta property="og:type" content="streaming" />
+      <meta
+        property="og:description"
+        content="StreamFlix - Seu Streaming de Filmes"
+      />
+      <meta
+        property="og:image"
+        content="./src/img/logo.jpg"
+      />
+      <meta name="twitter:card" content="summary" />
+    </seo>
+    <title>StreamFlix - Seu Streaming de Filmes</title>
   </head>
   <body class="bg-dark text-light">
     <!-- Navbar -->
