--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -5,26 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="./src/css/FontAwesomeFree6.4.0.css"
-    />
+    <link rel="stylesheet" href="./src/css/FontAwesomeFree6.4.0.css" />
     <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css" />
     <!-- <link rel="stylesheet" href="./src/css/animantions.css" /> -->
     <link rel="stylesheet" href="./src/css/style.css" />
 
     <seo>
       <meta name="robots" content="index,follow" />
-      <meta property="og:title" content="StreamFlix - Seu Streaming de Filmes" />
+      <meta
+        property="og:title"
+        content="StreamFlix - Seu Streaming de Filmes"
+      />
       <meta property="og:type" content="streaming" />
       <meta
         property="og:description"
         content="StreamFlix - Seu Streaming de Filmes"
       />
-      <meta
-        property="og:image"
-        content="./src/img/logo.jpg"
-      />
+      <meta property="og:image" content="./src/img/logo.jpg" />
       <meta name="twitter:card" content="summary" />
     </seo>
     <title>StreamFlix - Seu Streaming de Filmes</title>
@@ -106,6 +103,113 @@
           <!-- Cards de filmes carregados via JS -->
         </div>
       </section>
+    </div>
+
+    <div class="container">
+      <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              O que é a StreamFlix
+            </button>
+          </h2>
+          <div
+            id="collapseOne"
+            class="accordion-collapse collapse show"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              <p>
+                A StreamFlix é um serviço de streaming que oferece uma ampla
+                variedade de séries, filmes e documentários premiados em
+                milhares de aparelhos conectados à internet.
+              </p>
+              <p>
+                Você pode assistir a quantos filmes e séries quiser, quando e
+                onde quiser – tudo por um preço mensal acessível. Aqui você
+                sempre encontra novidades. A cada semana, adicionamos novas
+                séries e filmes.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item bg-dark">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
+              Onde posso assistir?
+            </button>
+          </h2>
+          <div
+            id="collapseTwo"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              <p>
+                Assista onde quiser, quando quiser. Acesse sua conta StreamFlix
+                em StreamFlix.com para assistir no computador ou em qualquer
+                aparelho conectado à internet compatível com o aplicativo
+                StreamFlix, como Smart TVs, smartphones, tablets, aparelhos de
+                streaming e videogames.
+              </p>
+
+              <p>
+                Você também pode baixar suas séries favoritas com o aplicativo
+                StreamFlix para iOS ou Android. Use os downloads para levar a
+                StreamFlix para onde quiser sem precisar de conexão com a
+                internet. Leve a StreamFlix com você para qualquer lugar.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapseThree"
+              aria-expanded="false"
+              aria-controls="collapseThree"
+            >
+              A StreamFlix é adequada para crianças?
+            </button>
+          </h2>
+          <div
+            id="collapseThree"
+            class="accordion-collapse collapse"
+            data-bs-parent="#accordionExample"
+          >
+            <div class="accordion-body">
+              <p>
+                A experiência infantil da StreamFlix faz parte da sua assinatura
+                para que as crianças se divirtam em seu próprio espaço com
+                séries e filmes familiares sob a supervisão dos responsáveis.
+              </p>
+              <p>
+                O recurso de controle parental, incluso nos perfis para crianças
+                e protegido por PIN, permite restringir a classificação etária
+                do conteúdo que as crianças podem ver e bloquear títulos
+                específicos que você não quer que elas assistam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./src/js/popper@2.11.8.js"></script>
