refatora estrutura do carrossel e adiciona carregamento de filmes da TMDB

--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -84,7 +84,7 @@
       <!-- Categoria: Lançamentos -->
       <section class="mb-4">
         <h3 class="mb-3 px-3">🎬 Lançamentos</h3>
-        <div class="row flex-nowrap overflow-auto px-3" id="secao-lancamentos">
+        <div class="row px-3 g-3" id="secao-lancamentos">
           <!-- Cards de filmes carregados via JS -->
         </div>
       </section>
@@ -92,7 +92,7 @@
       <!-- Categoria: Ação -->
       <section class="mb-4">
         <h3 class="mb-3 px-3">💥 Ação</h3>
-        <div class="row flex-nowrap overflow-auto px-3" id="secao-acao">
+        <div class="row px-3 g-3" id="secao-acao">
           <!-- Cards de filmes carregados via JS -->
         </div>
       </section>
@@ -100,7 +100,7 @@
       <!-- Categoria: Comédia -->
       <section class="mb-4">
         <h3 class="mb-3 px-3">😂 Comédia</h3>
-        <div class="row flex-nowrap overflow-auto px-3" id="secao-comedia">
+        <div class="row px-3 g-3" id="secao-comedia">
           <!-- Cards de filmes carregados via JS -->
         </div>
       </section>
@@ -214,15 +214,10 @@
 
     <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
+    <script src="./src/js/loader-secoes.js" type="module"></script>
     <script src="./src/js/loader-top-filmes.js" type="module"></script>
-    <script src="./src/js/loader-secoes.js"></script>
+    <script src="./src/js/loader-tmdb.js" type="module"></script> <!-- NOVO -->
 
-    <host>
-      <!-- tracker de telemetria -->
-      <script
-        src="https://pingobras.glitch.me/src/js/load-host.js"
-        defer
-      ></script>
-    </host>
+    
   </body>
 </html>
