atualiza categorias de filmes e refatora carregamento de dados da TMDB

--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -89,21 +89,30 @@
         </div>
       </section>
 
-      <!-- Categoria: Ação -->
+      <!-- Categoria: Em Alta (Trending) -->
       <section class="mb-4">
-        <h3 class="mb-3 px-3">💥 Ação</h3>
-        <div class="row px-3 g-3" id="secao-acao">
-          <!-- Cards de filmes carregados via JS -->
+        <h3 class="mb-3 px-3">🔥 Em Alta</h3>
+        <div class="row px-3 g-3" id="secao-trending">
+          <!-- Conteúdo via JS -->
         </div>
       </section>
 
-      <!-- Categoria: Comédia -->
+      <!-- Categoria: Melhores Avaliados -->
       <section class="mb-4">
-        <h3 class="mb-3 px-3">😂 Comédia</h3>
-        <div class="row px-3 g-3" id="secao-comedia">
-          <!-- Cards de filmes carregados via JS -->
+        <h3 class="mb-3 px-3">🏆 Melhores Avaliados</h3>
+        <div class="row px-3 g-3" id="secao-toprated">
+          <!-- Conteúdo via JS -->
         </div>
       </section>
+
+      <!-- Categoria: Próximos Lançamentos -->
+      <section class="mb-4">
+        <h3 class="mb-3 px-3">📅 Em Breve</h3>
+        <div class="row px-3 g-3" id="secao-upcoming">
+          <!-- Conteúdo via JS -->
+        </div>
+      </section>
+
     </div>
 
     <div class="container">
