--- a/devWebI/atividade-componentes/index.html
+++ b/devWebI/atividade-componentes/index.html
@@ -25,6 +25,7 @@
       <meta property="og:image" content="./src/img/logo.jpg" />
       <meta name="twitter:card" content="summary" />
     </seo>
+    
     <title>StreamFlix - Seu Streaming de Filmes</title>
   </head>
   <body class="bg-dark text-light">
@@ -45,7 +46,11 @@
           <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Filmes</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Séries</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Minha Lista</a></li>
+          <li class="nav-item">
+            <a class="nav-link" data-bs-toggle="offcanvas" href="#offcanvasMinhaLista" role="button" aria-controls="offcanvasMinhaLista">
+              📌 Minha Lista
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -221,12 +226,23 @@
       </div>
     </div>
 
+    <!-- Offcanvas - Minha Lista -->
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasMinhaLista" aria-labelledby="offcanvasMinhaListaLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasMinhaListaLabel">🎞️ Assistir Depois</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body" id="lista-salvos">
+        <p class="text-muted">Nenhum filme salvo ainda.</p>
+      </div>
+    </div>
+
     <script src="./src/js/popper@2.11.8.js"></script>
     <script src="./src/js/bootstrap@5.3.6.js"></script>
     <script src="./src/js/loader-secoes.js" type="module"></script>
     <script src="./src/js/loader-top-filmes.js" type="module"></script>
     <script src="./src/js/loader-tmdb.js" type="module"></script> <!-- NOVO -->
-
+    <script src="./src/js/watchlist.js" type="module"></script>
     
   </body>
 </html>
