Refatora sistema de pagamento: ajusta exibição de resumo e modifica importações de módulos

--- a/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/index.html
+++ b/projeto-sistemas/padroes-projeto/template method/ExemploTemplateMethod/index.html
@@ -63,10 +63,12 @@
       </ul>
 
       <button class="finalizar" onclick="finalizarSelecionado()">Finalizar Pagamento</button>
+
       <div id="resumo"></div>
     </section>
   </main>
 
-  <script src="dist/app.js"></script>
+  <script type="module" src="dist/app.js"></script>
+
 </body>
 </html>
