--- a/devWebI/atividade-reproducao-pagina/index.html
+++ b/devWebI/atividade-reproducao-pagina/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Notícia G1 Clone</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./src/css/animantions.css">
+  <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body class="bg-light">
 
   <!-- Banner Superior -->
   <div class="text-center bg-white p-2 border-bottom">
-    <img src="img/banner-superior.png" alt="Banner Superior" class="img-fluid">
+    <img src="./src/img/banner-superior.png" alt="Banner Superior" class="img-fluid">
   </div>
 
   <!-- Cabeçalho e Título -->
@@ -27,7 +28,7 @@
 
   <!-- Imagem Principal -->
   <div class="container my-4">
-    <img src="img/img-noticia.webp" class="img-fluid rounded" alt="Praça de Touros">
+    <img src="./src/img/img-noticia.webp" class="img-fluid rounded" alt="Praça de Touros">
     <p class="text-muted small">Imagem da Monumental Praça de Touros da Cidade do México — Foto: Reprodução/Google Maps</p>
   </div>
 
@@ -59,7 +60,7 @@
 
   <!-- Imagem inferior (newsletter ou propaganda) -->
   <div class="container text-center my-5">
-    <img src="img/img-fundo.png" class="img-fluid" alt="Resumo do dia">
+    <img src="./src/img/img-fundo.png" class="img-fluid" alt="Resumo do dia">
     <div class="mt-2">
       <button class="btn btn-danger">Inscreva-se e receba a newsletter</button>
     </div>
@@ -72,6 +73,7 @@
   </div>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./src/js/bootstrap@5.3.6.js"></script>
+  <script src="./src/js/popper@2.11.8.js"></script>
 </body>
 </html>
