--- a/devWebI/atividade-reproducao-pagina/index.html
+++ b/devWebI/atividade-reproducao-pagina/index.html
@@ -3,57 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Notícia G1 Clone</title>
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css" />
-		<link rel="stylesheet" href="./src/css/bootstrap-icons@1.13.1.css">
+    <link rel="stylesheet" href="./src/css/bootstrap-icons@1.13.1.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <title>Notícia G1 Clone</title>
   </head>
   <body class="bg-light">
-    <nav class="bg-red d-flex justify-content-between navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-				<h2>
-					<a href="#">G1</a>
-				</h2>
+    <nav
+      class="bg-light-gray navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-start"
+    >
+      <a href="#">globo.com</a>
+      <span class="separator">|</span>
+      <a href="#">g1</a>
+      <span class="separator">|</span>
+      <a href="#">ge</a>
+      <span class="separator">|</span>
+      <a href="#">gshow</a>
+      <span class="separator">|</span>
+      <a href="#">globoplay</a>
+    </nav>
+    <nav class="bg-red navbar navbar-expand-lg bg-body-tertiary">
+      <div class="w-75 d-flex justify-content-around">
+        <h2>
+          <a href="#">G1</a>
+        </h2>
 
-				<h2>
-					MUNDO
-				</h2>
-        <!-- <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
-
+        <h2>MUNDO</h2>
       </div>
     </nav>
-		<nav class="acesso-rapido flex-nowrap justify-content-between navbar-expand-lg bg-body-tertiary">
-			<!-- links de acesso rapido -->
-			<ul class="d-flex justify-content-between align-items-center" >
-				<p>fique por <strong>dentro</strong></p>
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Eleições</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Desaparecidos na Amazônia</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Greve em SP</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Feriados 2022</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">50 anos sem Leila Diniz</a>
-				</li>
-			</ul>
-	</nav>
+    <nav
+      class="acesso-rapido flex-nowrap justify-content-between navbar-expand-lg bg-body-tertiary"
+    >
+      <!-- links de acesso rapido -->
+      <ul class="d-flex justify-content-between align-items-center">
+        <p>fique por <strong>dentro</strong></p>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Eleições</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Desaparecidos na Amazônia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Greve em SP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Feriados 2022</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">50 anos sem Leila Diniz</a>
+        </li>
+      </ul>
+    </nav>
 
     <!-- Banner Superior -->
     <div class="text-center bg-white p-2 border-bottom">
@@ -151,7 +152,7 @@
 
     <!-- Rodapé com comentários -->
     <div class="container text-center mb-5">
-      <h5>Comentários (29)</h5>
+      <h5 class="bold">Comentários (29)</h5>
       <button class="btn btn-outline-secondary mt-2">
         Clique aqui para fazer login
       </button>
