--- a/devWebI/atividade-reproducao-pagina/index.html
+++ b/devWebI/atividade-reproducao-pagina/index.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="./src/css/bootstrap@5.3.6.css" />
     <link rel="stylesheet" href="./src/css/bootstrap-icons@1.13.1.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <!-- more priority -->
+    <link rel="stylesheet" href="./src/css/reset.css">
     <title>Notícia G1 Clone</title>
   </head>
   <body class="bg-light">
     <nav
       class="bg-light-gray navbar navbar-expand-lg bg-body-tertiary d-flex justify-content-start"
     >
-      <a href="#">globo.com</a>
+      <a class="c-blue" href="#">globo.com</a>
       <span class="separator">|</span>
-      <a href="#">g1</a>
+      <a class="c-red" href="#">g1</a>
       <span class="separator">|</span>
-      <a href="#">ge</a>
+      <a class="c-green" href="#">ge</a>
       <span class="separator">|</span>
-      <a href="#">gshow</a>
+      <a class="c-orange" href="#">gshow</a>
       <span class="separator">|</span>
-      <a href="#">globoplay</a>
+      <a class="c-light-red" href="#">globoplay</a>
     </nav>
-    <nav class="bg-red navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="header-title bg-red navbar navbar-expand-lg bg-body-tertiary">
       <div class="w-75 d-flex justify-content-around">
         <h2>
           <a href="#">G1</a>
